# minify-html

minify-html/: Cargo.toml
minify-html/src/minify/: attr.rs  content.rs
minify-html/src/tests/: mod.rs
