[package]
name = "minify-html"
description = "Extremely fast and smart HTML + JS + CSS minifier"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.18.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ahash = "0.8"
aho-corasick = "1.1"
lightningcss = { version = "1.0.0-alpha.68", optional = true }
memchr = "2"
minify-html-common = { version = "0.0.3", path = "../minify-html-common" }
once_cell = "1.21"
oxc_allocator = { version = "0.95", optional = true }
oxc_codegen = { version = "0.95", optional = true }
oxc_minifier = { version = "0.95", optional = true }
oxc_parser = { version = "0.95", optional = true }
oxc_span = { version = "0.95", optional = true }

[features]
default = ["lightningcss", "minify-js"]
lightningcss = ["dep:lightningcss"]
minify-js = ["dep:oxc_allocator", "dep:oxc_codegen", "dep:oxc_minifier", "dep:oxc_parser", "dep:oxc_span"]
